--- a/exercise-app/package.json
+++ b/exercise-app/package.json
@@ -1,5 +1,6 @@
 {
   "name": "exercise-app",
+  "homepage": "http://darcocarolyn.github.io/exercise-app",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
